--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -83,7 +83,7 @@ main {
         margin: 25px 35px;
         max-width: 100vw !important;
         .card-text {
-            height: 58%;
+            height: 70%;
             font-size: 1.2rem;
         }
         .card-title { 
