--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -76,7 +76,7 @@ main .box {
   max-width: 100vw !important;
 }
 main .box .card-text {
-  height: 58%;
+  height: 70%;
   font-size: 1.2rem;
 }
 main .box .card-title {
@@ -275,9 +275,8 @@ section.article-container div.article figure img {
 }
 
 .corner-top-right {
-  transform: rotate(90deg);
   right: 0;
-  top: 0;
+  top: -25px;
 }
 
 .corner-bottom-left {
@@ -287,9 +286,9 @@ section.article-container div.article figure img {
 }
 
 .corner-bottom-right {
-  transform: rotate(180deg);
-  bottom: -20px;
-  right: 0;
+  bottom: -30px;
+  right: 0px;
+  overflow: none;
 }
 
 /*----------------------------------------------------------------*/
